Correctly escape unit names

When char is signed we where implicitely calling the QString::arg(int, ...
overload.
BUG:488854